--- a/css/goodslist.css
+++ b/css/goodslist.css
@@ -20,6 +20,15 @@
     padding: 0 !important;
     font-size: 13px !important;
   }
+  .btn_l{
+    width: 68px !important;
+    height: 30px !important;
+    border: 0 !important;
+    line-height: 30px !important;
+    text-align: center !important;
+    padding: 0 !important;
+    font-size: 13px !important;
+  }
   .right_top{
       width: 100%;
       line-height: 20px;
@@ -40,3 +49,12 @@
   .col4{
     color: #FBAB3E;
   }
+  .layui-btn+.layui-btn {
+    margin-left: 0px;
+}
+.scroll_close{
+  color:#21B995;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
